@@ -46,9 +46,10 @@ extern  GeanyFunctions   *geany_functions;
 GGD_BEGIN_PLUGIN_API
 
 
-#define GGD_PLUGIN_ONAME  geanygendoc
-#define GGD_PLUGIN_CNAME  G_STRINGIFY (GGD_PLUGIN_ONAME)
-#define GGD_PLUGIN_NAME   "GeanyGenDoc"
+#define GGD_PLUGIN_ONAME    geanygendoc
+#define GGD_PLUGIN_CNAME    G_STRINGIFY (GGD_PLUGIN_ONAME)
+#define GGD_PLUGIN_NAME     "GeanyGenDoc"
+#define GGD_PLUGIN_VERSION  "0.1" /* Don't use Geany-Plugin's version */
 
 
 /* global plugin options */
