@@ -5,6 +5,8 @@
     there is two top-level tags sharing the same name.
   * NEWS:
     Update NEWS file.
+  * src/ggd-plugin.c, src/ggd-plugin.h:
+    Use non-Geany-Plugin version.
 
 
 2010-06-04  Colomban Wendling  <ban(at)herbesfolles(dot)org>
